[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.8   

[options.extras_require]
testing =
    pytest>=7.2.0
    tox>=4.0.16
    black>=22.12.0
    flake8>=6.0.0
    mypy>=0.991

[options.package_data]
DecisionTree_Classifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py